Se agrego seguridad y autenticador

--- a/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
+++ b/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
@@ -13,7 +13,7 @@
             <li><a href="#questions">Preguntas</a></li>
             <li><a href="#contact">Contacto</a></li>
             <li><a href="#download">Descargar</a></li>
-            <li><a href="acceso.html">Inicio sesión</a></li>
+            <li><a routerLink="/login">Inicio sesión</a></li>
             <li><a>|</a></li>
             <li><a routerLink="/usuarios/nuevo">Registro</a></li>
 
