agregando botones regresar en el registrar e iniciar sesion,junto al card

--- a/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
+++ b/FrontMoneyMentor/src/app/components/autenticador/autenticador.html
@@ -1,24 +1,34 @@
-<div class="container" style="text-align: center">
-    <div>
-      <img src="assets/logo.png" alt="Logo de la empresa" >
+<mat-card class="login-card" >
+  <mat-card-content >
+    <div class="container">
+      <div style="margin-bottom: 15px;">
+        <img src="/assets/img/logocortado.png" alt="Logo de la empresa" style="width: 120px;" >
+      </div>
 
+      <h2 style="color: #4158A6;">Iniciar sesión</h2>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Usuario</mat-label>
+        <input matInput placeholder="Username" [(ngModel)]="username" />
+      </mat-form-field>
+
+      <br />
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput placeholder="Password" [(ngModel)]="password" />
+      </mat-form-field>
+
+      <br />
+      <div class="button-group">
+      <button mat-raised-button color="warn" class="custom-button" (click)="cerrar()">
+        Regresar
+      </button>
+
+      <button mat-raised-button color="primary" class="custom-button" (click)="login()">
+        Ingresar
+      </button>
+      </div>
     </div>
-    <h2>Inicie sesión</h2>
-    <mat-form-field class="example-full-width">
-      <mat-label>Usuario</mat-label>
-      <input matInput placeholder="Username" [(ngModel)]="username" />
-    </mat-form-field>
-    <br />
-    <mat-form-field class="example-full-width">
-      <mat-label>Password</mat-label>
-      <input
-        type="password"
-        matInput
-        placeholder="Password"
-        [(ngModel)]="password"
-      />
-    </mat-form-field>
-    <br />
-    <button mat-raised-button class="custom-button" (click)="login()">Ingresar</button>
-  </div>
-
+  </mat-card-content>
+</mat-card>
