--- a/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
+++ b/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
@@ -51,7 +51,7 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="/assets/img/ayudamos.png" alt="">
+                <img src="/assets/img/ayudamos.png" alt="" >
                 <h3>Cómo ayudamos </h3>
                 <p>
                     Simplificamos la gestión financiera de los jóvenes, ofreciendo herramientas
@@ -85,7 +85,7 @@
 </section>
 
 <!--Servicos-->
-<section class="servicios" id="servicios">
+<section class="services" id="services">
 
     <div class="content">
         <h2>Servicios Destacados</h2>
