--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
@@ -1,39 +1,36 @@
 mat-form-field {
+    width: 50%;
+}
 
-  width: 60%;
+button[mat-raised-button] {
+background-color:rgb(251, 140, 0);
+color: white;
+border: none;
+padding: 0.5rem 5rem;
+font-size: 1.1rem;
+border-radius: 0.375rem;  
+cursor: pointer;
+transition: background-color 0.3s ease;
+width: 20%;  
+}
 
-  }
+.login-card{
+  max-width: 400px;
+   margin: 120px auto; 
+   padding: 20px; 
+   text-align: center;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+  
+}
 
+.example-full-width {
+  width: 100%;
+}
 
-
-  button[matButton="elevated"] {
-
-
-
-  background-color:rgb(242, 49, 35);
-
-  color: white;
-
-  border: none;
-
-  padding: 0.5rem 1.25rem;
-
-  font-size: 1.1rem;
-
-  border-radius: 0.375rem; cursor: pointer;
-
-  transition: background-color 0.3s ease;
-
-  width: 60%;
-
- }
-
-
-
-
-
- button[matButton="elevated"]:hover {
-
-  background-color: #faf67c;
-
- }
+.button-group{
+  display: flex;
+  justify-content: center; 
+  gap: 15px; /* Espacio entre botones */
+  margin-top: 20px;
+}
