--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.html
@@ -1,57 +1,69 @@
-<div class="container">
-  <div style="text-align: center; margin: 5%">
-    <h2>Registro de Usuario</h2>
-  </div>
-
-  <div style="text-align: center; margin: 5%">
-    <form [formGroup]="form" (submit)="aceptar()">
-      @if(edicion){
-      <mat-form-field>
-        <mat-label>ID</mat-label>
-        <input matInput formControlName="codigo" />
-        <mat-error> @if (form.get('codigo')?.hasError('required')) { Ingrese id} </mat-error>
-      </mat-form-field>
-
-      }
-      <mat-form-field appearance="fill">
-        <mat-label>Nombre</mat-label>
-        <input matInput formControlName="nombre" />
-        <mat-error *ngIf="form.get('nombre')?.hasError('required')">
-          El nombre es obligatorio
-        </mat-error>
-      </mat-form-field>
-
-      <br />
-
-      <mat-form-field appearance="fill">
-        <mat-label>Correo</mat-label>
-        <input matInput formControlName="correo" />
-        <mat-error *ngIf="form.get('correo')?.hasError('required')">
-          El correo es obligatorio
-        </mat-error>
-        <mat-error *ngIf="form.get('correo')?.hasError('email')">
-          Debe ingresar un correo válido (debe incluir "@")
-        </mat-error>
-      </mat-form-field>
-
-      <br />
-      <ng-container *ngIf="!edicion">
-        <mat-form-field appearance="fill">
-          <mat-label>Contraseña</mat-label>
-          <input matInput formControlName="contrasenia" type="password" />
-          <mat-error *ngIf="form.get('contrasenia')?.hasError('required')">
-            La contraseña es obligatoria
-          </mat-error>
-          <mat-error *ngIf="form.get('contrasenia')?.hasError('minlength')">
-            La contraseña debe tener 10 caracteres o mas
-          </mat-error>
-        </mat-form-field>
-      </ng-container>
-      <br />
-
-      <div>
-        <button mat-raised-button color="primary">Registrar</button>
+<mat-card class="login-card">
+  <mat-card-content>
+    <div class="container">
+      <div style="margin-bottom: 15px">
+        <img src="/assets/img/logocortado.png" alt="Logo de la empresa" style="width: 120px" />
       </div>
-    </form>
-  </div>
-</div>
+      <div style="text-align: center; margin: 5%">
+        <h2 style="color: #4158A6;">Registro de Usuario</h2>
+      </div>
+
+      <div style="text-align: center; margin: 5%">
+        <form [formGroup]="form" (submit)="aceptar()">
+          @if(edicion){
+          <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>ID</mat-label>
+            <input matInput formControlName="codigo" />
+            <mat-error> @if (form.get('codigo')?.hasError('required')) { Ingrese id} </mat-error>
+          </mat-form-field>
+
+          }
+          <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label >Nombre</mat-label>
+            <input matInput formControlName="nombre" />
+            <mat-error *ngIf="form.get('nombre')?.hasError('required')">
+              El nombre es obligatorio
+            </mat-error>
+          </mat-form-field>
+
+          <br />
+
+          <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Correo</mat-label>
+            <input matInput formControlName="correo" />
+            <mat-error *ngIf="form.get('correo')?.hasError('required')">
+              El correo es obligatorio
+            </mat-error>
+            <mat-error *ngIf="form.get('correo')?.hasError('email')">
+              Debe ingresar un correo válido (debe incluir "@")
+            </mat-error>
+          </mat-form-field>
+
+          <br />
+          <ng-container *ngIf="!edicion">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>Contraseña</mat-label>
+              <input matInput formControlName="contrasenia" type="password" />
+              <mat-error *ngIf="form.get('contrasenia')?.hasError('required')">
+                La contraseña es obligatoria
+              </mat-error>
+              <mat-error *ngIf="form.get('contrasenia')?.hasError('minlength')">
+                La contraseña debe tener 10 caracteres o mas
+              </mat-error>
+            </mat-form-field>
+          </ng-container>
+          <br />
+          <div class="button-group">
+            <button mat-raised-button color="warn" class="custom-button" (click)="cerrar()">
+              Regresar
+            </button>
+
+            <button mat-raised-button color="primary" class="custom-button" (click)="aceptar()">
+              Ingresar
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
