--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -9,6 +9,18 @@
         <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menurecursousuario">
             <mat-icon> menu </mat-icon>recurso-usuario
         </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuImpuestooperacion">
+            <mat-icon> menu </mat-icon>impuesto-operacion
+        </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuRecurso">
+            <mat-icon> menu </mat-icon>recurso
+        </button>
+
+        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuroles">
+            <mat-icon> menu </mat-icon>roles
+        </button>
         }
 
         @if(isTester()){
@@ -28,17 +40,10 @@
             <mat-icon> menu </mat-icon>Ahorro
         </button>
 
-        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuRecurso">
-            <mat-icon> menu </mat-icon>recurso
-        </button>
-
         <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuImpuesto">
             <mat-icon> menu </mat-icon>impuesto
         </button>
 
-        <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuImpuestooperacion">
-            <mat-icon> menu </mat-icon>impuesto-operacion
-        </button>
 
         <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuReportesBalance">
             <mat-icon> menu </mat-icon>Reportes Balance
@@ -87,6 +92,10 @@
     <mat-menu #menuReportesBalance="matMenu">
         <button mat-menu-item routerLink="/app/sumaingresos">Reporte 1</button>
         <button mat-menu-item routerLink="/app/listarmes">Reporte 2</button>
+    </mat-menu>
+    <mat-menu #menuroles="matMenu">
+        <button mat-menu-item routerLink="/app/roles">lista roles</button>
+        <button mat-menu-item routerLink="/app/roles/nuevo">registrar rol</button>
     </mat-menu>
     <mat-menu #menuSalir="matMenu">
         <button mat-menu-item routerLink="/login" (click)="cerrar()">
