--- a/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
+++ b/FrontMoneyMentor/src/app/components/usuario/usuarioregistrar/usuarioregistrar.css
@@ -3,7 +3,7 @@ mat-form-field {
 }
 
 button[mat-raised-button] {
-background-color:rgb(251, 140, 0);
+background-color:#FF8343;
 color: white;
 border: none;
 padding: 0.5rem 5rem;
@@ -42,6 +42,10 @@ width: 20%;
 
   padding-top: 90px; /* 👈 DESPEGA EL CONTENIDO DEL HEADER */
 
+}
+
+.navbar ul li a {
+    text-decoration: none !important;
 }
 
 .custom-field{
