--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -63,6 +63,9 @@
     <mat-menu #menuOperacion="matMenu">
         <button mat-menu-item routerLink="/app/operacion">Listar Operación</button>
         <button mat-menu-item routerLink="/app/operacion/nuevo">Registrar Operación</button>
+        <button mat-menu-item routerLink="/app/operacion/filtro1">filtro 1</button>
+        <button mat-menu-item routerLink="/app/operacion/filtro2">filtro 2</button>
+
     </mat-menu>
 
     <mat-menu #menuBalance="matMenu">
