--- a/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
+++ b/FrontMoneyMentor/src/app/components/balance/balance-list/balance-list.html
@@ -1,3 +1,4 @@
+<mat-card>
 <div class="container">
     <div style="text-align: center;margin:5%">
         <h2>Lista de Balances</h2>
@@ -57,6 +58,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
-
 </div>
+</mat-card>
