--- a/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
+++ b/FrontMoneyMentor/src/app/components/impuesto/impuesto-list/impuesto-list.html
@@ -1,3 +1,4 @@
+<mat-card>
 <div class="container">
     <div style="text-align: center;margin:5%">
         <h2>Lista de Impuestos</h2>
@@ -22,3 +23,4 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 </div>
+</mat-card>
