--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -22,26 +22,10 @@
       <mat-icon> menu </mat-icon>impuesto-operacion
     </button>
 
-        <button mat-button [matMenuTriggerFor]="menuRecursos">Recursos</button>
-
-        <mat-menu #menuRecursos="matMenu">
-            <button mat-menu-item routerLink="/app/recurso">Listar Recursos</button>
-            <button mat-menu-item routerLink="/app/recurso/nuevo">Registrar Recurso</button>
-
-            <mat-divider></mat-divider>
-
-            <!-- NUEVOS FILTROS -->
-            <button mat-menu-item routerLink="/app/recurso/filtrar-fecha">Filtrar por Fecha</button>
-            <button mat-menu-item routerLink="/app/recurso/filtrar-autor">Filtrar por Autor</button>
-        </mat-menu>
-
-    <button
-      mat-button
-      aria-label="example icon-button with menu icon"
-      [matMenuTriggerFor]="menuRecurso"
-    >
-      <mat-icon> menu </mat-icon>recurso
-    </button>
+    <button 
+    mat-button aria-label="example icon-button with menu icon" 
+    [matMenuTriggerFor]="menuRecursos">
+    <mat-icon> menu </mat-icon>Recursos</button>
 
     <button
       mat-button
@@ -123,9 +107,11 @@
     <button mat-menu-item routerLink="/app/ahorro">Listar Ahorro</button>
     <button mat-menu-item routerLink="/app/ahorro/nuevo">Registrar Ahorro</button>
   </mat-menu>
-  <mat-menu #menuRecurso="matMenu">
+  <mat-menu #menuRecursos="matMenu">
     <button mat-menu-item routerLink="/app/recurso">Listar recursos</button>
     <button mat-menu-item routerLink="/app/recurso/nuevo">Registrar recurso</button>
+    <button mat-menu-item routerLink="/app/recurso/filtrar-fecha">Filtrar por Fecha</button>
+      <button mat-menu-item routerLink="/app/recurso/filtrar-autor">Filtrar por Autor</button>
   </mat-menu>
   <mat-menu #menuImpuesto="matMenu">
     <button mat-menu-item routerLink="/app/impuesto">Listar impuestos</button>
