--- a/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
+++ b/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
@@ -16,7 +16,7 @@
     <!-- Usuario ID -->
     <ng-container matColumnDef="c3">
       <th mat-header-cell *matHeaderCellDef>Usuario ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.usuario?.idUsuario }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.usuario?.nombre }}</td>
     </ng-container>
 
     <!-- Actualizar -->
